--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 inventory = inventory
-private_key_file = ~/.ssh/aws
+private_key_file = ~/.ssh/aws-4640
 inject_facts_as_vars = False
 
 [inventory]
